# kpmx

./: CMakeLists.txt  LICENSE  README.md  kpmx.kdev4  org.performance-mixer.kpmx.desktop
src/: CMakeLists.txt  Main.qml  main.cpp
src/boost/: exception.cpp
src/model/mixer/: ChannelStripListModel.cpp  ChannelStripListModel.h  ChannelStripModel.cpp  ChannelStripModel.h  LayerModel.cpp  LayerModel.h  LayersListModel.cpp  LayersListModel.h  PerformanceMixerModel.cpp  PerformanceMixerModel.h
src/model/pipewire/: NodesListModel.cpp  NodesListModel.h
src/pipewire/: pipewire_control_data.h  pipewire_control_thread.cpp  pipewire_feedback_thread.cpp  pipewire_monitor_thread.cpp  pipewire_thread.h
src/setup/: mixer_setup.cpp  mixer_setup.h
src/synchronization/: lock_free_queue.h  lock_free_value.h  updates_to_qt_nodes_model_thread.cpp  updates_to_qt_nodes_model_thread.h  updates_to_qt_thread.cpp  updates_to_qt_thread.h
src/ui/LayerMixer/: LayerMixer.qml  LayerPage.qml
src/ui/MixerView/: ChannelStrip.qml
src/ui/NodesListView/: NodesListView.qml
src/wireplumber/: wireplumber_node.h  wireplumber_object_manager_thread.cpp  wireplumber_object_manager_thread.h
